# CUDA-Programming

./: .gitignore
ex0/env-tester/: CMakeLists.txt
ex0/env-tester/src/: main.cpp
ex0/mandelbrot-set/: CMakeLists.txt  README.md
ex0/mandelbrot-set/src/: aux.cpp  aux.h  data_types.h  main.cpp
ex0/mandelbrot-set/src/kernels/: gpu.cu  kernels.h  serial.cpp  threading.cpp
ex1/dense-matrix-mult/: CMakeLists.txt
ex1/dense-matrix-mult/src/: data_types.h  driver.cu
ex1/dense-matrix-mult/src/kernels/: parallel.cu  serial.cu
ex1/dense-matrix-mult/tests/: tests.cpp
